day 2 work is done

--- a/HTML-CSS Assignment/1.css
+++ b/HTML-CSS Assignment/1.css
@@ -1,23 +1,75 @@
+@font-face
+{
+font-family: qs;
+src: url('quicksand.ttf');
+}
+
+
+body{
+    font-family: 'qs';
+    font-size: 16px;
+    color: #000;
+}
+
+.container{
+    width: 1170px;
+    height: auto;
+    margin: 0 auto;
+    text-align: center;
+}
+
+header, footer, section {
+    overflow: hidden;
+}
+.headerlogo{
+ height: 110px;
+    width: 110px;
+    position: fixed;
+    left: 375px;
+    top: 20px;
+    background-color: rgba(0, 0, 0, 0.7);
+    border-radius: 20px;
+    z-index: 100;
+    
+   
+}
+.navigation a{
+  color: white;
+    margin-left: 25px;
+    margin-right: 25px;
+    font-size: 20px;
+}
+
+.navigation a:hover{
+    color: #a2c73c;
+}
+
+.headerlogo img{
+    position: fixed;
+    left:395px;
+    top: 35px;
+}
 .header{
-    height: 50px;
-     background-color: rgba(0, 0, 0, 0.4);
+    height: 70px;
+     background-color: rgba(0, 0, 0, 0.7);
     position: fixed;
     width: 100%;
     
     
 }
 .header button{
- border-radius: 12px;
+ border-radius: 20px;
    padding: 5px;
-    opacity: 1;
-
+    height: 40px;
+    width: 100px;
+    font-size: 20px;
     background-color: rgba(0, 0, 0, 0.01);
     color: white;
     border: none;
-    
-    margin-left: 50px;;
-
-        }
+       }
+#bannertitle{
+    font-size: 50px;
+}
 
 
 .header button:hover {
@@ -30,14 +82,38 @@
     margin-left: 40%;
 }
 
-#banner {
+.banner {
 background-image: url("banner-img.png");
     height: 700px;
     width: 100%;
+    z-index: 50;
     background-size: cover;
-    background-position: center;
+    background-position: center; 
     
+}
+
+.banner img{
+   position: relative;
+    top: 160px;
+    height: 180px;
+    width: 200px;
+}
+.banner .container button{
+    background-color:#a2c73c;
+    border-radius: 30px;
+    position: relative;
+    top: 240px;
+    height: 65px;
+    width: 560px;
+    color: white;
+    margin: 0 auto;
+    font-size: 35px;
     
+}
+.banner .container h1 {
+    color: white;
+    position: relative;
+    top: 200px;
 }
 .parentgrid{
     height: 1024px;
@@ -54,11 +130,11 @@ background-image: url("banner-img.png");
   display: inline-grid;
   grid-template-columns: auto auto auto;
     margin-top: 110px;
-  margin-left: 33.33%;
-  margin-right: 33.33%; 
+
 }
 .grid-item {
   border: ;
+    text-align: center;
  width: 265px;
  height: 265px; 
 }
@@ -92,6 +168,25 @@ background-image: url("banner-img.png");
     background-color: #0eb049;
 }
 
+.gridhead{
+    font-size: 
+}
+.gridp1{
+    color: #444547;
+    font-weight: bold;
+}
+.gridp2{
+    color: white;
+    font-weight: bold;
+}
+.gridp3{
+    font-weight: 300;
+}
+.discover{
+    position: relative;
+    font-weight: bold;
+    border: 0;
+}
 
 
 .well
@@ -99,14 +194,14 @@ background-image: url("banner-img.png");
     height: 540px;
     width: 100%;
     background-color:#0072bc;
-    text-align: center;
+    
 }
 
 .well #welltitle {
     font-size: 36px;
     position: relative;
     top:125px;
-    text-align: center;
+    
     color: white;
    
 }
@@ -115,8 +210,7 @@ background-image: url("banner-img.png");
     
     position: relative;
     top:125px;
-    margin-left: 475px;
-    margin-right: 475px;
+ 
     text-align: center;
     font-size: 18px;
     color: white;
@@ -127,10 +221,12 @@ background-image: url("banner-img.png");
 .well #wellbutton {
     color: white;
     background-color: #a2c73c;
-    width: 200px;
-    border-radius: 10px;
+
+    border-radius: 30px;
     position: relative;
     top: 150px;
+     height: 65px;
+    width: 560px;
   
 }
 .grid1{
@@ -142,7 +238,7 @@ text-align: center;
   
 }
 .grid-item1 {
-    
+    padding: 10px;
     border: 1px solid white;
     height: 435px;
     width: 330px;
@@ -172,11 +268,87 @@ text-align: center;
     border: 1px solid white;
     height: 435px;
     width: 330px;
+    padding: 10px;
 }
 
 .grid1 button{
-    border-radius: 10px;
-    background-color: white;
+    margin-top: 40px;
+    border-radius: 40px;
+    height: 50px;
+    width: 250px;
+background-color: white;
     border-color: #a2c73c;
     color: #0072bc;
+}
+
+footer{
+    background-color: #0f151a;
+    width: 100%;
+    height: 365px;
+    
+}
+
+footer .container .first {
+    margin-top: 50px;
+}
+
+footer .container .second img{
+    margin-top: 50px;
+
+}
+
+footer .container .grid3-item{
+   
+    
+    float: left;
+    width: 583px;
+}
+
+.grid3-item ul {
+    list-style: none;
+    float: left;
+    color: #3e6485;
+    position: relative;
+
+}
+
+.grid3-item ul:nth-child(1){
+    
+}
+
+.grid3-item ul:nth-child(2){
+    margin-left: 50px;
+}
+
+.grid3-item ul:nth-child(3){
+     margin-left: 50px;
+}
+
+.grid3-item ul li:nth-child(1){
+    position: relative;
+    top: 100px;
+    font-size: 20px;
+}
+.grid3-item ul li:nth-child(2){
+    position: relative;
+    top: 155px;
+    font-size: 20px;
+}
+#middle{
+    margin-left: 35px;
+    margin-right: 35px;
+}
+
+#bottom{
+    position: relative;
+    top:230px;
+    left: -300px;
+    color:#3e6485 ;
+}
+
+#line{
+    position: relative;
+    top: 175px;
+    background-color: black;
+     border-top: 1px ;
 }
