--- a/HTML-CSS Assignment/1.css
+++ b/HTML-CSS Assignment/1.css
@@ -64,7 +64,7 @@ header, footer, section {
     height: 40px;
     width: 100px;
     font-size: 20px;
-    background-color: rgba(0, 0, 0, 0.01);
+    background-color:#a2c73c;
     color: white;
     border: none;
        }
