--- a/HTML-CSS Assignment/1.css
+++ b/HTML-CSS Assignment/1.css
@@ -142,7 +142,7 @@ background-image: url("banner-img.png");
 .grid-container .grid-item:nth-child(1){
     background-color: #a2c73c;
     position: relative;
-}-
+}
 .grid-container .grid-item:nth-child(1) ::after{
     content: "";
     position: absolute;
@@ -381,6 +381,7 @@ footer .container .grid3-item{
     float: left;
     color: #3e6485;
     position: relative;
+    
 
 }
 
@@ -400,11 +401,13 @@ footer .container .grid3-item{
     position: relative;
     top: 100px;
     font-size: 20px;
+    float: left;
 }
 .grid3-item ul li:nth-child(2){
     position: relative;
     top: 155px;
     font-size: 20px;
+      
 }
 #middle{
     margin-left: 35px;
