--- a/HTML-CSS Assignment/1.css
+++ b/HTML-CSS Assignment/1.css
@@ -16,6 +16,7 @@ body{
     height: auto;
     margin: 0 auto;
     text-align: center;
+
 }
 
 header, footer, section {
@@ -24,31 +25,34 @@ header, footer, section {
 .headerlogo{
  height: 110px;
     width: 110px;
-    position: fixed;
+    position:fixed;
     left: 375px;
     top: 20px;
     background-color: rgba(0, 0, 0, 0.7);
     border-radius: 20px;
     z-index: 100;
     
-   
+}
+
+
+.headerlogo img{
+    position:fixed;
+    left:395px;
+    top: 35px;
 }
 .navigation a{
   color: white;
     margin-left: 25px;
     margin-right: 25px;
     font-size: 20px;
+    text-decoration: none;
+    font-weight: bold;
 }
 
 .navigation a:hover{
     color: #a2c73c;
 }
 
-.headerlogo img{
-    position: fixed;
-    left:395px;
-    top: 35px;
-}
 .header{
     height: 70px;
      background-color: rgba(0, 0, 0, 0.7);
@@ -60,13 +64,14 @@ header, footer, section {
 }
 .header button{
  border-radius: 20px;
-   padding: 5px;
+   padding:10px;
     height: 40px;
     width: 100px;
     font-size: 20px;
     background-color:#a2c73c;
     color: white;
     border: none;
+    font-weight: bold;
        }
 #bannertitle{
     font-size: 50px;
@@ -108,6 +113,7 @@ background-image: url("banner-img.png");
     color: white;
     margin: 0 auto;
     font-size: 35px;
+    border: none;
     
 }
 .banner .container h1 {
@@ -297,6 +303,8 @@ position: relative;
     font-size: 18px;
     color: white;
     font font-weight: bold;
+    padding-right: 120px;
+    padding-left: 120px;
 
 }
 
@@ -311,6 +319,7 @@ position: relative;
      height: 65px;
     width: 560px;
     font-size: 35px;
+    border: none;
   
 }
 .grid1{
@@ -344,8 +353,9 @@ text-align: center;
     border-radius: 40px;
     height: 50px;
     width: 250px;
-background-color: white;
+    background-color: white;
     border-color: #a2c73c;
+
     color: #0072bc;
     font-size: 18px;
 }
@@ -408,6 +418,19 @@ footer .container .grid3-item{
     top: 155px;
     font-size: 20px;
       
+}
+
+.grid3-item ul:nth-child(2) li:nth-child(2){
+    position: relative;
+    top: 155px;
+    font-size: 20px;
+    right: 30px;
+      
+}
+
+.grid3-item a {
+    text-decoration: none;
+    color: #3e6485;
 }
 #middle{
     margin-left: 35px;
