--- a/HTML-CSS Assignment/css/1.css
+++ b/HTML-CSS Assignment/css/1.css
@@ -17,6 +17,7 @@ body{
     height: auto;
     margin: 0 auto;
     text-align: center;
+    
 
 }
 
@@ -90,7 +91,7 @@ header, footer, section {
 }
 
 .banner {
-background-image: url("./assets/banner-img.png");
+background-image: url("/images/banner-img.png");
     height: 700px;
     width: 100%;
     background-size: cover;
@@ -194,7 +195,7 @@ background-image: url("./assets/banner-img.png");
 }
 
 .grid-container .grid-item:nth-child(2){
-    background-image: url(./assets/Amanora_JOD_projects_Neo.jpg);
+    background-image: url(/images/Amanora_JOD_projects_Neo.jpg);
 
 }
 
@@ -216,7 +217,7 @@ color: #BABABA;
 
 }
 .grid-container .grid-item:nth-child(4){
-    background-image: url(./assets/Amanora_JOD_projects_Adreno.jpg);
+    background-image: url(/images/Amanora_JOD_projects_Adreno.jpg);
 }
 .grid-container .grid-item:nth-child(5) img {
     position: relative;
@@ -237,7 +238,7 @@ color: #BABABA;
 
 
 .grid-container .grid-item:nth-child(6){
-    background-image: url(./assets/Amanora_JOD_projects_gateway.jpg);
+    background-image: url(/images/Amanora_JOD_projects_gateway.jpg);
 }
 .grid-container .grid-item:nth-child(7){
     background-color: #4494d1;
@@ -264,7 +265,7 @@ position: relative;
 }
 
 .grid-container .grid-item:nth-child(8){
-    background-image: url(./assets/NEO-Gallery-Image-3-new.jpg);
+    background-image: url(/images/NEO-Gallery-Image-3-new.jpg);
 }
 .grid-container .grid-item:nth-child(9){
     background-color: #0eb049;
