--- a/HTML-CSS Assignment/css/1.css
+++ b/HTML-CSS Assignment/css/1.css
@@ -1,12 +1,6 @@
-@font-face
-{
-font-family: qs;
-src: url('../font/quicksand.ttf');
-}
-
 
 body{
-    font-family: 'qs';
+    font-family: 'Quicksand', sans-serif;
     font-size: 16px;
     color: #000;
 }
@@ -25,22 +19,39 @@ header, footer, section {
     overflow: hidden;
 }
 .headerlogo{
- height: 110px;
-    width: 110px;
-    position:fixed;
-    left: 375px;
-    top: 20px;
-    background-color: rgba(0, 0, 0, 0.7);
-    border-radius: 20px;
-    z-index: 100;
-    
-}
-
-
+    height: 110px;
+       width: 110px;
+       margin-top: 20px;
+       position: fixed;
+       float: left;
+       background-color: rgba(0, 0, 0, 0.0);
+       border-radius: 20px;
+       
+       margin-left: 50px;
+       
+   }
+   
+   .headerlogo:after
+   {
+       content: "";
+       height: 60px;
+       width: 110px;
+       margin-top: 50px;
+       background-color: rgba(0, 0, 0,0.7);
+       position: absolute;
+       
+       float: left;
+       
+       border-bottom-right-radius: 20px;
+           border-bottom-left-radius: 20px;
+   }
+   
 .headerlogo img{
-    position:fixed;
-    left:395px;
-    top: 35px;
+    position: absolute;
+    margin-left: 20px;
+    margin-top: 20px;
+    z-index: 100;
+ 
 }
 .navigation a{
   color: white;
@@ -87,7 +98,8 @@ header, footer, section {
 
 .navigation{
     margin-top: 10px;
-    margin-left: 40%;
+    margin-right: 50px;
+    float: right;
 }
 
 .banner {
@@ -100,32 +112,28 @@ background-image: url("../images/banner-img.png")   ;
 }
 
 .banner img{
-   position: relative;
-    top: 160px;
+    margin-top: 160px;
     height: 180px;
     width: 200px;
 }
 .banner .container button{
     background-color:#a2c73c;
     border-radius: 30px;
-    position: relative;
-    top: 240px;
+    
+    margin-top: 80px;
+
     height: 65px;
     width: 560px;
     color: white;
-    margin: 0 auto;
+
     font-size: 35px;
     border: none;
     
 }
 .banner .container h1 {
     color: white;
-    position: relative;
-    top: 200px;
-}
-.parentgrid{
-    height: 1024px;
-    width: 100%;
+   
+    margin-bottom: 0px;
 }
 .grid{
     width: 100%;
@@ -135,40 +143,39 @@ background-image: url("../images/banner-img.png")   ;
 }
 
 .grid-container {
-  display: inline-grid;
-  grid-template-columns: auto auto auto;
+  margin: 0 auto;
     margin-top: 110px;
-
-
+    width: 795px;
+    
 }
 .grid-item {
-  border: ;
+ 
     text-align: center;
- width: 265px;
- height: 265px; 
-    display: block;
+    width: 265px;
+    height: 265px; 
+   
+    float: left;
     
 }
 
-.grid-item:nth-child(1) *{
-    margin-bottom: -5
-    
-}
-.grid-item:nth-child(9) *{
-    margin-bottom: -1
-    
-}
 .discover{
-    position:;
+    position: absolute;
+    bottom: 0px;
+    font-weight: bold;
+    margin-left: 80px; 
 
 }
+
+.discover a{
+  text-decoration: none;
+color: black;
+}
+
 .grid-container .grid-item:nth-child(1){
     background-color: #a2c73c;
     position: relative;
-
 }
-
-.grid-container .grid-item:nth-child(1) ::after{
+.grid-container .grid-item:nth-child(1):after{
     content: "";
     position: absolute;
     left: 100%;
@@ -177,11 +184,15 @@ background-image: url("../images/banner-img.png")   ;
     border-top: 45px solid transparent;
     border-bottom:45px solid transparent;
     z-index: 100;
-
 }
-.grid-container .grid-item:nth-child(3) ::after{
-    
-    
+
+.grid-container .grid-item:nth-child(3){
+    background-color: #075daa;
+    position: relative;
+}
+
+
+.grid-container .grid-item:nth-child(3):after{
     content: "";
     position: absolute;
     top: 100%;
@@ -190,43 +201,19 @@ background-image: url("../images/banner-img.png")   ;
     border-right: 45px solid transparent;
     border-left: 45px solid transparent;
     z-index: 100;
-
-
 }
-
-.grid-container .grid-item:nth-child(2){
-    background-image: url(../images/Amanora_JOD_projects_Neo.jpg);
-
-}
-
-.grid-container .grid-item:nth-child(3){
-    background-color: #075daa;
-    position: relative;
-    
-}
-
 #thirdp{
 color: #BABABA;
     
 }
 
-
-.grid-container .grid-item:nth-child(3) .discover{
-    position: relative;
-    top: 60px;
-
-}
-.grid-container .grid-item:nth-child(4){
-    background-image: url(../images/Amanora_JOD_projects_Adreno.jpg);
-}
 .grid-container .grid-item:nth-child(5) img {
-    position: relative;
-    top: 60px;
+    margin-top: 50px;
+ 
 }
 .grid-container .grid-item:nth-child(5) p{
     font-style: italic;
-    position: relative;
-    top: 60px;
+   
     font-weight: bold;
     padding-left: 35px;
     padding-right: 35px;
@@ -236,15 +223,11 @@ color: #BABABA;
     
 }
 
-
-.grid-container .grid-item:nth-child(6){
-    background-image: url(../images/Amanora_JOD_projects_gateway.jpg);
-}
 .grid-container .grid-item:nth-child(7){
     background-color: #4494d1;
     position: relative;
 }
-.grid-container .grid-item:nth-child(7) ::after{
+.grid-container .grid-item:nth-child(7):after{
     content: "";
     position: absolute;
     bottom:100%;
@@ -258,21 +241,12 @@ color: #BABABA;
 }
 
 
-
-.grid-container .grid-item:nth-child(7) .discover{
-position: relative;
-    top: 110px;
-}
-
-.grid-container .grid-item:nth-child(8){
-    background-image: url(../images/NEO-Gallery-Image-3-new.jpg);
-}
 .grid-container .grid-item:nth-child(9){
     background-color: #0eb049;
     position: relative;
 }
 
-.grid-container .grid-item:nth-child(9) ::after{
+.grid-container .grid-item:nth-child(9):after{
     content: "";
     position: absolute;
     right:100%;
@@ -283,10 +257,6 @@ position: relative;
     border-bottom:45px solid transparent;
     
 
-}
-
-
-.gridhead{
 }
 .gridp1{
     color: #444547;
@@ -305,20 +275,7 @@ position: relative;
         padding-right: 30px;
     padding-left: 30px;
 }
-.discover{
 
-    font-weight: bold;
-}
-
-#1{
-    background-color: black;
-    z-index: 200;
-}
-
-.discover a{
-  text-decoration: none;
-color: black;
-}
 
 .well
 {
@@ -330,22 +287,18 @@ color: black;
 
 .well #welltitle {
     font-size: 36px;
-    position: relative;
-    top:90px;
-    
+    margin-top: 90px;
     color: white;
    
 }
 
 .well #wellcontent{
-    
-    position: relative;
-    top:125px;
     font-size: 18px;
     color: white;
-    font font-weight: bold;
-    padding-right: 120px;
-    padding-left: 120px;
+   
+    padding-right: 140px;
+    padding-left: 140px;
+    margin-top: 60px;
 
 }
 
@@ -353,14 +306,12 @@ color: black;
 .well #wellbutton {
     color: white;
     background-color: #a2c73c;
-
-    border-radius: 30px;
-    position: relative;
-    top: 150px;
+     border-radius: 30px;
      height: 65px;
     width: 560px;
     font-size: 35px;
     border: none;
+    margin-top: 60px;
   
 }
 .grid1{
@@ -380,6 +331,14 @@ text-align: center;
 
 }
 
+.grid-item1 h4{
+font-size: 20px;
+}
+
+
+.grid-item2 h4{
+    font-size: 20px;
+    }
 
 .grid-item2 {
     display: inline-block;    
@@ -395,8 +354,8 @@ text-align: center;
     height: 50px;
     width: 250px;
     background-color: white;
-    border-color: #a2c73c;
-
+  
+    border: 2px solid #a2c73c;
     color: #0072bc;
     font-size: 18px;
 }
@@ -431,42 +390,16 @@ footer .container .grid3-item{
     list-style: none;
     float: left;
     color: #3e6485;
-    position: relative;
-    
+   margin-top: 80px;
 
 }
 
-.grid3-item ul:nth-child(1){
-    
-}
-
-.grid3-item ul:nth-child(2){
-    margin-left: 50px;
-}
-
-.grid3-item ul:nth-child(3){
-     margin-left: 50px;
-}
-
-.grid3-item ul li:nth-child(1){
-    position: relative;
-    top: 100px;
-    font-size: 20px;
+.grid3-item ul li {
     float: left;
-}
-.grid3-item ul li:nth-child(2){
-    position: relative;
-    top: 155px;
-    font-size: 20px;
-      
-}
-
-.grid3-item ul:nth-child(2) li:nth-child(2){
-    position: relative;
-    top: 155px;
-    font-size: 20px;
-    right: 30px;
-      
+    margin-top: 40px;
+    width: 33%;
+    font-family: 'Quicksand', sans-serif;
+    text-align: left;
 }
 
 .grid3-item a {
@@ -478,16 +411,11 @@ footer .container .grid3-item{
     margin-right: 35px;
 }
 
-#bottom{
-    position: relative;
-    top:230px;
-    left: -300px;
-    color:#3e6485 ;
+.lastdiv{
+    margin-top: 285px;
+    border-top: 1px solid black;
+    text-align: center;
 }
-
-#line{
-    position: relative;
-    top: 175px;
-    background-color: black;
-     border-top: 1px ;
+#bottom{
+    color: #3e6485;
 }
